Change exercise <mark> css to prevent overlaps
TODO: is bold text still legible?

--- a/lso/static/css/guide.less
+++ b/lso/static/css/guide.less
@@ -101,7 +101,11 @@ section.exercises {
         color: @blue;
         padding-left: 1em;
         mark {
-            color: inherit;
+            color: #c00;
+            background: none;
+            border: 0;
+            border-bottom: 1px #c00 dotted;
+            font-weight: bold;
         }
     }
 
